--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "all": "^0.0.0",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "ethers": "^6.8.1",
+    "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.122",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.9.4",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
