--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@rainbow-me/rainbowkit": "^1.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +28,8 @@
     "stream-http": "^3.2.0",
     "typescript": "^4.9.4",
     "url": "^0.11.3",
+    "viem": "^1.19.1",
+    "wagmi": "^1.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
