--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-js-loader": "^0.1.3",
     "react-parallax-tilt": "^1.7.122",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
